2009-04-08  Badlop  <badlop@process-one.net>

	* src/mod_irc/mod_irc_connection.erl: Fix compilation warnings.

2009-04-08  Evgeniy Khramtsov <ekhramtsov@process-one.net>

	* src/ejabberd_captcha.erl: fixed compilation warnings.

2009-04-01  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.5.txt: Added file for new release

2009-03-30  Badlop  <badlop@process-one.net>

	* src/ejabberd_captcha.erl: Small code reorganization; export new
	functions build_captcha_html/2 and check_captcha/2

2009-03-24  Badlop  <badlop@process-one.net>

	* src/ejabberd_sm.erl: Partially retract SVN r1976
	EJAB-300 (EJAB-890). Check default privacy list when account, not
	a specific session, receives a presence subscription
	stanza (EJAB-300).
	* src/ejabberd_c2s.erl: Likewise

2009-03-20  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: implement roster acces model (thanks
	to Andy Skelton)(EJAB-780)

2009-03-19  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberdctl.template: Allow more environment variable overrides
	in ejabberdctl (thanks to Brian Cully)(EJAB-891)

2009-03-13  Evgeniy Khramtsov <ekhramtsov@process-one.net>

	* src/ejabberd_captcha.erl: XEP-158 (CAPTCHA Forms).
	* src/ejabberd_config.erl: likewise.
	* src/ejabberd_sup.erl: likewise.
	* src/jlib.hrl: likewise.
	* src/web/ejabberd_http.erl: likewise.
	* src/mod_muc/mod_muc_room.erl: CAPTCHA support.
	* src/mod_muc/mod_muc_room.hrl: likewise.
	* tools/captcha.sh: sample CAPTCHA script.

2009-03-10  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.4.txt: Added file for new release

	* src/tls/tls_drv.c: Fix encryption problem for ejabberd_http
	after timeout (thanks to Alexey Shchepin)(EJAB-880)

2009-03-10  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Fix PEP with other domains and s2s
	(EJAB-825). Also fixes send last published items in subscription.
